--- a/package.json
+++ b/package.json
@@ -10,11 +10,12 @@
   },
   "dependencies": {
     "@types/react": "^17.0.0",
+    "mdbreact": "^5.0.2",
     "next": "10.0.3",
     "next-on-netlify": "^2.6.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
-    "react-icons": "^4.1.0",
+    "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
     "styled-components": "^5.2.1"
   },
